--- a/index.html
+++ b/index.html
@@ -13,28 +13,35 @@
    <body>
       <section class=mainBanner>
          <header class=header>
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
-               <div class=container id=header__inner>
-                  <ul class="ps-0 mb-0 headerIcone">
-                     <li><a href="https://www.facebook.com/profile.php?id=61555177419317&mibextid=LQQJ4d"><i class="fa fa-facebook" aria-hidden=true></i></a></li>
-                     <li><a href="https://www.instagram.com/rabeeb_khan7?utm_source=ig_web_button_share_sheet&igsh=ODdmZWVhMTFiMw=="><i class="fa fa-instagram" aria-hidden=true></i></a></li>
-                  </ul>
-                  <button class=navbar-toggler type=button data-bs-toggle=collapse data-bs-target=#navbarSupportedContent aria-controls=navbarSupportedContent aria-expanded=false aria-label="Toggle navigation">
+         <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class=container id=header__inner>
+               <ul class="ps-0 mb-0 headerIcone">
+                  <li><a href="https://www.facebook.com/profile.php?id=61555177419317&mibextid=LQQJ4d"><i
+                           class="fa fa-facebook" aria-hidden=true></i></a></li>
+                  <li><a
+                        href="https://www.instagram.com/rabeeb_khan7?utm_source=ig_web_button_share_sheet&igsh=ODdmZWVhMTFiMw=="><i
+                           class="fa fa-instagram" aria-hidden=true></i></a></li>
+               </ul>
+               <a class="nav-link after_nav" href="./index.html"><img src="./images/png/logo-no-background.png" alt="Company Logo"
+                     width="55px" height="35px"></a>
+               <button class=navbar-toggler type=button data-bs-toggle=collapse data-bs-target=#navbarSupportedContent
+                  aria-controls=navbarSupportedContent aria-expanded=false aria-label="Toggle navigation">
                   <span class="navbar-toggler-ico fa fa-bars"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id=navbarSupportedContent>
-                     <ul class="navbar-nav m-auto mb-2 mb-lg-0 navLink">
-                        <li class=nav-item><a class=nav-link href=#>RABEEB</a></li>
-                        <li class=nav-item><a class=nav-link href=#>KHAN</a></li>
-                        <li class=nav-item><a class=nav-link href=./index.html><img src=./images/png/logo-no-background.png alt="Company Logo" width=55px height=35px></a></li>
-                        <li class=nav-item><a class=nav-link href=./photos.html>PHOTO</a></li>
-                        <li class=nav-item><a class=nav-link href=./video.html>VIDEO</a></li>
-                     </ul>
-                     
-                  </div>
+               </button>
+               <div class="collapse navbar-collapse" id=navbarSupportedContent>
+                  <ul class="navbar-nav m-auto mb-2 mb-lg-0 navLink">
+                     <li class=nav-item><a class=nav-link href=#>RABEEB</a></li>
+                     <li class=nav-item><a class=nav-link href=#>KHAN</a></li>
+                     <a class="nav-link" href="./index.html"><img src="./images/png/logo-no-background.png" alt="Company Logo"
+                     width="55px" height="35px"></a>
+                     <li class=nav-item><a class=nav-link href=./photos.html>PHOTO</a></li>
+                     <li class=nav-item><a class=nav-link href=./video.html>VIDEO</a></li>
+                  </ul>
+
                </div>
-            </nav>
-         </header>
+            </div>
+         </nav>
+      </header>
          <div class=bannerMain>
             <section id=home-top class="container px-0">
                <div id=home-visual>
