--- a/photos.html
+++ b/photos.html
@@ -7,7 +7,7 @@
       <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css>
       <link rel=stylesheet href=css/main.css>
       <link rel=stylesheet href=css/style.css>
-      <link rel=stylesheet href=/css/responsive.css>
+      <link rel=stylesheet href="css/respons.css">
       <link href=https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css rel=stylesheet>
       <link href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css rel=stylesheet integrity=sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC crossorigin=anonymous>
       <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin=anonymous referrerpolicy=no-referrer>
@@ -18,27 +18,34 @@
    <body>
       <section class=mainBanner>
          <header class=header>
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
-               <div class=container id=header__inner>
-                  <ul class="ps-0 mb-0 headerIcone">
-                     <li><a href="https://www.facebook.com/profile.php?id=61555177419317&mibextid=LQQJ4d"><i class="fa fa-facebook" aria-hidden=true></i></a></li>
-                     <li><a href="https://www.instagram.com/rabeeb_khan7?utm_source=ig_web_button_share_sheet&igsh=ODdmZWVhMTFiMw=="><i class="fa fa-instagram" aria-hidden=true></i></a></li>
-                  </ul>
-                  <button class=navbar-toggler type=button data-bs-toggle=collapse data-bs-target=#navbarSupportedContent aria-controls=navbarSupportedContent aria-expanded=false aria-label="Toggle navigation">
+             <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class=container id=header__inner>
+               <ul class="ps-0 mb-0 headerIcone">
+                  <li><a href="https://www.facebook.com/profile.php?id=61555177419317&mibextid=LQQJ4d"><i
+                           class="fa fa-facebook" aria-hidden=true></i></a></li>
+                  <li><a
+                        href="https://www.instagram.com/rabeeb_khan7?utm_source=ig_web_button_share_sheet&igsh=ODdmZWVhMTFiMw=="><i
+                           class="fa fa-instagram" aria-hidden=true></i></a></li>
+               </ul>
+               <a class="nav-link after_nav" href="./index.html"><img src="./images/png/logo-no-background.png" alt="Company Logo"
+                     width="55px" height="35px"></a>
+               <button class=navbar-toggler type=button data-bs-toggle=collapse data-bs-target=#navbarSupportedContent
+                  aria-controls=navbarSupportedContent aria-expanded=false aria-label="Toggle navigation">
                   <span class="navbar-toggler-ico fa fa-bars"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id=navbarSupportedContent>
-                     <ul class="navbar-nav m-auto mb-2 mb-lg-0 navLink">
-                        <li class=nav-item><a class=nav-link href=#>RABEEB</a></li>
-                        <li class=nav-item><a class=nav-link href=#>KHAN</a></li>
-                        <li class=nav-item><a class=nav-link href=./index.html><img src=./images/png/logo-no-background.png alt="Company Logo" width=55px height=35px></a></li>
-                        <li class=nav-item><a class=nav-link href=./photos.html>PHOTO</a></li>
-                        <li class=nav-item><a class=nav-link href=./video.html>VIDEO</a></li>
-                     </ul>
-                     
-                  </div>
+               </button>
+               <div class="collapse navbar-collapse" id=navbarSupportedContent>
+                  <ul class="navbar-nav m-auto mb-2 mb-lg-0 navLink">
+                     <li class=nav-item><a class=nav-link href=#>RABEEB</a></li>
+                     <li class=nav-item><a class=nav-link href=#>KHAN</a></li>
+                     <a class="nav-link" href="./index.html"><img src="./images/png/logo-no-background.png" alt="Company Logo"
+                     width="55px" height="35px"></a>
+                     <li class=nav-item><a class=nav-link href=./photos.html>PHOTO</a></li>
+                     <li class=nav-item><a class=nav-link href=./video.html>VIDEO</a></li>
+                  </ul>
+
                </div>
-            </nav>
+            </div>
+         </nav>
          </header>
       </section>
       <main id=main>
@@ -96,7 +103,7 @@
                <div class="grid-col-9 col-12 col-lg-9">
                   <div class=feat-photo-wrap>
                      <div class=feat-photo>
-                        <img width=823 height=496 src="./images/m2.jpg" class="attachment-thumb-823x9999 size-thumb-823x9999" alt="" decoding=async loading=lazy>
+                        <img width=823 height=496 src="./images/mainimg.jpeg" class="attachment-thumb-823x9999 size-thumb-823x9999" alt="" decoding=async loading=lazy>
                         <span class=ribbon>
                            <svg xmlns=http://www.w3.org/2000/svg xml:space=preserve version=1.1 style=shape-rendering:geometricPrecision;text-rendering:geometricPrecision;image-rendering:optimizeQuality;fill-rule:evenodd;clip-rule:evenodd viewBox="0 0 610 500" xmlns:xlink=http://www.w3.org/1999/xlink>
                               <defs>
@@ -229,34 +236,35 @@ Thank you for your support as I continue to pursue my dreams in tennis.
             <ul>
                <li>
                   <a href=# target=_blank rel=nofollow>
-                  <img src="images/logo1.png" alt=Head>
+                     <img src="images/logo1.png" alt=Lacoste>
                   </a>
                </li>
                <li>
                   <a href=# target=_blank rel=nofollow>
-                  <img src=images/logo_asics.png alt=Asics>
+                     <img src=images/head.png alt=Head>
                   </a>
                </li>
                <li>
                   <a href=# target=_blank rel=nofollow>
-                  <img src=images/logo_waterdrop.png alt=Waterdrop>
+                     <img src=images/logo_asics.png alt=Asics>
                   </a>
                </li>
                <li>
                   <a href=# target=_blank rel=nofollow>
-                  <img src=images/logo_sila.png alt=SILA>
+                     <img src=images/logo_waterdrop.png alt=Waterdrop>
                   </a>
                </li>
                <li>
                   <a href=# target=_blank rel=nofollow>
-                  <img src=images/logo_hublot.png alt=Hublot>
+                     <img src=images/logo_sila.png alt=SILA>
                   </a>
                </li>
                <li>
                   <a href=# target=_blank rel=nofollow>
-                  <img src=images/Raiffeisen.png alt=Raiffeisen>
+                     <img src=images/logo_hublot.png alt=Hublot>
                   </a>
                </li>
+   
             </ul>
          </div>
       </section>
@@ -264,30 +272,24 @@ Thank you for your support as I continue to pursue my dreams in tennis.
          <div id=footer__inner class=container>
             <ul id=footer-menu-left class="footer-menu menu">
                <li>
-                  <a href=#>
-                  News </a>
+                  <a href=#> News </a>
                </li>
                <li>
-                  <a href=#>
-                  Novak </a>
+                  <a href=#> Rabeeb </a>
                </li>
                <li>
-                  <a href=#>
-                  Nolefam </a>
+                  <a href=#> khan </a>
                </li>
             </ul>
             <ul id=footer-inner-menu_right class="footer-menu menu">
                <li>
-                  <a href=#>
-                  Tennis </a>
+                  <a href=#> Tennis </a>
                </li>
                <li>
-                  <a href=#>
-                  Photo </a>
+                  <a href=#> Photo </a>
                </li>
                <li>
-                  <a href=#>
-                  Video </a>
+                  <a href=#> Video </a>
                </li>
             </ul>
             <span id=footer-logo>
@@ -300,9 +302,6 @@ Thank you for your support as I continue to pursue my dreams in tennis.
                </g>
             </span>
          </div>
-         <!-- #footer__inner -->
-         
-         <!-- #footer_bottom -->
       </footer>
       <script src=js/customQ.js></script>
       <script src=https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js integrity=sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM crossorigin=anonymous></script>
