--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   <ul class="navbar-nav m-auto mb-2 mb-lg-0 navLink">
                      <li class=nav-item><a class=nav-link href=#>RABEEB</a></li>
                      <li class=nav-item><a class=nav-link href=#>KHAN</a></li>
-                     <a class="nav-link" id="CompanyLogo" href="./index.html"><img src="./images/png/logo-no-background.png" alt="Company Logo"
+                     <a class="nav-link CompanyLogo" href="./index.html"><img src="./images/png/logo-no-background.png" alt="Company Logo"
                      width="55px" height="35px"></a>
                      <li class=nav-item><a class=nav-link href=./photos.html>PHOTO</a></li>
                      <li class=nav-item><a class=nav-link href=./video.html>VIDEO</a></li>
